build3.txt

> eduforge@0.1.0 build
> next build

▲ Next.js 16.1.6 (Turbopack)
- Environments: .env

  Creating an optimized production build ...
Error: Cannot apply unknown utility class `border-border`. Are you using CSS modules or similar and missing `@reference`? https://tailwindcss.com/docs/functions-and-directives#reference-directive
    [2m[at onInvalidCandidate (D:\TRICH\eduforge\node_modules\tailwindcss\dist\lib.js:21:1314)][0m
    [2m[at Ee (D:\TRICH\eduforge\node_modules\tailwindcss\dist\lib.js:16:37066)][0m
    [2m[at D:\TRICH\eduforge\node_modules\tailwindcss\dist\lib.js:21:355][0m
    [2m[at Pr (D:\TRICH\eduforge\node_modules\tailwindcss\dist\lib.js:3:1733)][0m
    [2m[at _ (D:\TRICH\eduforge\node_modules\tailwindcss\dist\lib.js:3:1377)][0m
    [2m[at Te (D:\TRICH\eduforge\node_modules\tailwindcss\dist\lib.js:21:172)][0m
    [2m[at pn (D:\TRICH\eduforge\node_modules\tailwindcss\dist\lib.js:38:294)][0m
    [2m[at process.processTicksAndRejections (node:internal/process/task_queues:105:5)][0m
    [2m[at async dn (D:\TRICH\eduforge\node_modules\tailwindcss\dist\lib.js:38:631)][0m
    [2m[at async Xr (D:\TRICH\eduforge\node_modules\@tailwindcss\node\dist\index.js:10:3417)][0m

> Build error occurred
Error: Turbopack build failed with 3 errors:
./src/app/globals.css
Error evaluating Node.js code
CssSyntaxError: tailwindcss: D:\TRICH\eduforge\src\app\globals.css:1:1: Cannot apply unknown utility class `border-border`. Are you using CSS modules or similar and missing `@reference`? https://tailwindcss.com/docs/functions-and-directives#reference-directive
    at Input.error (node_modules/postcss/lib/input.js:135:16) [D:\TRICH\eduforge\.next\build\chunks\node_modules_fe693df6._.js:4651:22]
    at Root.error (node_modules/postcss/lib/node.js:146:32) [D:\TRICH\eduforge\.next\build\chunks\node_modules_fe693df6._.js:928:38]
    [at Object.Once (D:\TRICH\eduforge\node_modules\@tailwindcss\postcss\dist\index.js:10:6913)]
    [at process.processTicksAndRejections (node:internal/process/task_queues:105:5)]
    at async LazyResult.runAsync (node_modules/postcss/lib/lazy-result.js:293:11) [D:\TRICH\eduforge\.next\build\chunks\node_modules_fe693df6._.js:6214:21]
    at async transform (turbopack:///[turbopack-node]/transforms/postcss.ts:70:34) [D:\TRICH\eduforge\.next\build\chunks\[root-of-the-server]__51225daf._.js:146:36]
    at async run (turbopack:///[turbopack-node]/ipc/evaluate.ts:92:23) [D:\TRICH\eduforge\.next\build\chunks\[root-of-the-server]__974941ed._.js:443:31]

Import trace:
  Client Component Browser:
    ./src/app/globals.css [Client Component Browser]
    ./src/app/layout.tsx [Server Component]


./src/components/layout/Sidebar.tsx:2:10
Ecmascript file had an error
[0m [90m 1 |[39m [36mimport[39m [33mLink[39m [36mfrom[39m [32m"next/link"[39m
[31m[1m>[22m[39m[90m 2 |[39m [36mimport[39m { usePathname } [36mfrom[39m [32m"next/navigation"[39m
 [90m   |[39m          [31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m
 [90m 3 |[39m [36mimport[39m { [33mBookOpen[39m[33m,[39m [33mLayoutDashboard[39m[33m,[39m [33mLibrary[39m[33m,[39m [33mMessageSquare[39m[33m,[39m [33mPieChart[39m[33m,[39m [33mSettings[39m[33m,[39m [33mPresentation[39m[33m,[39m [33mHelpCircle[39m } [36mfrom[39m [32m"lucide-react"[39m
 [90m 4 |[39m [36mimport[39m { cn } [36mfrom[39m [32m"@/lib/utils"[39m
 [90m 5 |[39m[0m

You're importing a component that needs `usePathname`. This React Hook only works in a Client Component. To fix, mark the file (or its parent) with the `"use client"` directive.

 Learn more: https://nextjs.org/docs/app/api-reference/directives/use-client



Import trace:
  Server Component:
    ./src/components/layout/Sidebar.tsx
    ./src/app/dashboard/layout.tsx


./src/app/layout.tsx:5:1
Module not found: Can't resolve '@/components/ui/toaster'
[0m [90m 3 |[39m [36mimport[39m [32m'@/app/globals.css'[39m
 [90m 4 |[39m [36mimport[39m { [33mThemeProvider[39m } [36mfrom[39m [32m'@/components/theme-provider'[39m
[31m[1m>[22m[39m[90m 5 |[39m [36mimport[39m { [33mToaster[39m } [36mfrom[39m [32m'@/components/ui/toaster'[39m
 [90m   |[39m [31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m
 [90m 6 |[39m
 [90m 7 |[39m [36mconst[39m inter [33m=[39m [33mInter[39m({ subsets[33m:[39m [[32m'latin'[39m][33m,[39m variable[33m:[39m [32m'--font-inter'[39m })
 [90m 8 |[39m [36mconst[39m jakarta [33m=[39m [33mPlus_Jakarta_Sans[39m({ subsets[33m:[39m [[32m'latin'[39m][33m,[39m variable[33m:[39m [32m'--font-jakarta'[39m })[0m

Import map: aliased to relative './src/components/ui/toaster' inside of [project]/


https://nextjs.org/docs/messages/module-not-found


    at async transform (turbopack:///[turbopack-node]/transforms/postcss.ts:70:34) [D:\TRICH\eduforge\.next\build\chunks\[root-of-the-server]__51225daf._.js:146:36])
    at async run (turbopack:///[turbopack-node]/ipc/evaluate.ts:92:23) [D:\TRICH\eduforge\.next\build\chunks\[root-of-the-server]__974941ed._.js:443:31])
    at <unknown> (./src/components/layout/Sidebar.tsx:2:10)
    at <unknown> (./src/app/layout.tsx:5:1)
    at <unknown> (https://nextjs.org/docs/messages/module-not-found)
